--- a/01_工厂模式.md
+++ b/01_工厂模式.md
@@ -49,7 +49,7 @@
 
 
 
-```c
+```cpp
 //抽象产品类
 class AbstractProduct
 {
@@ -93,7 +93,7 @@ public:
 
 ### 定义抽象产品类
 
-```c
+```cpp
 ///定义抽象产品类
 class AbstractBallProduct
 {
@@ -110,7 +110,7 @@ protected:
 
 ### 定义具体产品类
 
-```c
+```cpp
 
 //三个具体产品类
 //具体产品类Basketball
@@ -164,7 +164,7 @@ public:
 
 ### 定义工厂类
 
-```c
+```cpp
 /// 定义工厂类和工厂方法
 class SimpleFactory
 {
@@ -188,7 +188,7 @@ public:
 
 ### 测试
 
-```c
+```cpp
 #include "SimpleFactory.h"
 
 int main() {
@@ -259,7 +259,7 @@ SimpleFactory类中有一组 if 分支判断逻辑，是不是应该用多态或
 
 ### 定义抽象工厂类
 
-```c
+```cpp
 /// 定义抽象工厂类
 class AbstractFactory
 {
@@ -275,7 +275,7 @@ protected:
 
 ### 定义具体工厂类
 
-```c
+```cpp
 
 ///三个具体工厂类
 ///具体工厂类  只生产单一产品
@@ -313,7 +313,7 @@ public:
 
 ### 测试
 
-```c
+```cpp
 int main() {
 
     std::cout << "工厂方法模式" << std::endl;
@@ -340,5 +340,9 @@ int main() {
 
 ### 输出
 
-![image-20201224174952734](D:\GitHub\DesignPattern\upload\01_工厂模式\B_01_工厂模式.png)
+![image-20201224174952734](\upload\01_工厂模式\B_01_工厂模式.png)
+
+
+
+*个人能力有限，如有错误之处或者其他建议，敬请告知欢迎探讨，谢谢!*
 
