更新 函数名， GitHub 链接路径

--- a/设计模式之工厂方法模式.md
+++ b/设计模式之工厂方法模式.md
@@ -63,7 +63,7 @@
 
 ### GitHub
 
-[**FactoryMethod**](https://github.com/lichangke/DesignPattern/tree/main/demos/01_%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/FactoryMethod)
+[**FactoryMethod**](https://github.com/lichangke/DesignPattern/tree/main/demos/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E4%B9%8B%E5%B7%A5%E5%8E%82%E6%96%B9%E6%B3%95%E6%A8%A1%E5%BC%8F/FactoryMethod)
 
 ### 定义抽象产品类
 
