--- a/设计模式之简单工厂模式.md
+++ b/设计模式之简单工厂模式.md
@@ -105,7 +105,7 @@ public:
 
 ### GitHub
 
-[**SimpleFactory**](https://github.com/lichangke/DesignPattern/tree/main/demos/01_%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/SimpleFactory)
+[**SimpleFactory**](https://github.com/lichangke/DesignPattern/tree/main/demos/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E4%B9%8B%E7%AE%80%E5%8D%95%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/SimpleFactory)
 
 ### 定义抽象产品类
 
