--- a/设计模式之工厂方法模式.md
+++ b/设计模式之工厂方法模式.md
@@ -48,10 +48,44 @@
 
 
 
-- 抽象工厂（Abstract Factory）：提供了创建产品的接口，调用者通过它访问具体工厂的工厂方法 newProduct() 来创建产品。
-- 具体工厂（ConcreteFactory）：主要是实现抽象工厂中的抽象方法，完成具体产品的创建。
-- 抽象产品（Product）：定义了产品的规范，描述了产品的主要特性和功能。
-- 具体产品（ConcreteProduct）：实现了抽象产品角色所定义的接口，由具体工厂来创建，它同具体工厂之间一一对应。
+- **抽象工厂（AbstractFactory）**：提供了创建产品的接口，调用者通过它访问具体工厂的工厂方法 newProduct() 来创建产品。
+- **具体工厂（ConcreteFactory）**：主要是实现抽象工厂中的抽象方法，完成具体产品的创建。
+- **抽象产品（Product）**：定义了产品的规范，描述了产品的主要特性和功能。
+- **具体产品（ConcreteProduct）**：实现了抽象产品角色所定义的接口，由具体工厂来创建，它同具体工厂之间一一对应。
+
+```cpp
+//抽象产品类
+class AbstractProduct
+{
+public:
+	//抽象方法：
+};
+ 
+//具体产品类
+class ConcreteProduct :public AbstractProduct
+{
+public:
+	//具体实现方法
+};
+ 
+//抽象工厂类
+class AbstractFactory 
+{
+public:
+	//抽象方法生产产品：
+    virtual AbstractProduct * createProduct() = 0;
+};
+ 
+//具体工厂类
+class ConcreteFactory :public AbstractFactory
+{
+public:
+	//具体工厂生产具体产品
+    
+};
+```
+
+
 
 ![01_工厂方法](/upload\设计模式之工厂方法模式\设计模式之工厂方法模式.jpg)
 
