--- a/设计模式之抽象工厂模式.md
+++ b/设计模式之抽象工厂模式.md
@@ -125,6 +125,10 @@ public:
 
 # 代码示例
 
+## GitHub
+
+[AbstractFactory](https://github.com/lichangke/DesignPattern/tree/main/demos/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E4%B9%8B%E6%8A%BD%E8%B1%A1%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/AbstractFactory)
+
 ## 定义抽象产品类
 
 ```cpp
