添加 delete 释放内存

--- a/设计模式之工厂方法模式.md
+++ b/设计模式之工厂方法模式.md
@@ -101,11 +101,77 @@ public:
 
 ### 定义抽象产品类
 
-见简单工厂模式
+```cpp
+///定义抽象产品类
+class AbstractBallProduct
+{
+public:
+    virtual ~AbstractBallProduct() = default;
+    //抽象方法：
+    virtual void productName() = 0;
+    virtual void productIntroduction() = 0;
+protected:
+    AbstractBallProduct()= default;
+
+};
+```
+
+
 
 ### 定义具体产品类
 
-见简单工厂模式
+```cpp
+///三个具体产品类
+///具体产品类Basketball
+class Basketball :public AbstractBallProduct
+{
+public:
+    Basketball() = default;
+    ~Basketball() override {
+        std::cout << "Basketball Bye" << std::endl;
+    };
+    void productName() override{
+        std::cout << "This is a Basketball" << std::endl;
+    }
+    void productIntroduction() override{
+        std::cout << "Introduction for Basketball" << std::endl;
+    }
+};
+
+///具体产品类Football
+class Football :public AbstractBallProduct
+{
+public:
+    Football() = default;
+    ~Football() override {
+        std::cout << "Football Bye" << std::endl;
+    };
+    void productName() override{
+        std::cout << "This is a Football" << std::endl;
+    }
+    void productIntroduction() override{
+        std::cout << "Introduction for Football" << std::endl;
+    }
+};
+
+///具体产品类Volleyball
+class Volleyball :public AbstractBallProduct
+{
+public:
+    Volleyball() = default;
+    ~Volleyball() override {
+        std::cout << "Volleyball Bye" << std::endl;
+    };
+    void productName() override{
+        std::cout << "This is a Volleyball" << std::endl;
+    }
+    void productIntroduction() override{
+        std::cout << "Introduction for Volleyball" << std::endl;
+    }
+};
+```
+
+
 
 ### 定义抽象工厂类
 
@@ -114,8 +180,8 @@ public:
 class AbstractFactory
 {
 public:
-    ~AbstractFactory() = default;
-    virtual AbstractBallProduct * getProduct() = 0;
+    virtual ~AbstractFactory() = default;
+    virtual AbstractBallProduct * createProduct() = 0;
 protected:
     AbstractFactory() = default;
 };
@@ -132,8 +198,10 @@ class BasketballFactory : public AbstractFactory
 {
 public:
     BasketballFactory() = default;
-    ~BasketballFactory() = default;
-    AbstractBallProduct *getProduct() override{
+    ~BasketballFactory() override {
+        std::cout << "BasketballFactory Bye" << std::endl;
+    };
+    AbstractBallProduct *createProduct() override{
         return  new Basketball();
     }
 };
@@ -143,8 +211,10 @@ class FootballFactory : public AbstractFactory
 {
 public:
     FootballFactory() = default;
-    ~FootballFactory() = default;
-    AbstractBallProduct *getProduct() override{
+    ~FootballFactory() override {
+        std::cout << "FootballFactory Bye" << std::endl;
+    };
+    AbstractBallProduct *createProduct() override{
         return  new Football();
     }
 };
@@ -153,8 +223,10 @@ class VolleyballFactory : public AbstractFactory
 {
 public:
     VolleyballFactory() = default;
-    ~VolleyballFactory() = default;
-    AbstractBallProduct *getProduct() override{
+    ~VolleyballFactory() override {
+        std::cout << "VolleyballFactory Bye" << std::endl;
+    };
+    AbstractBallProduct *createProduct() override{
         return  new Volleyball();
     }
 };
@@ -171,20 +243,28 @@ int main() {
     AbstractFactory *factory = nullptr;
 
     factory = new BasketballFactory();
-    product = factory->getProduct();
+    product = factory->createProduct();
     product->productName();
+    delete factory;
+    delete product;
+
 
     factory = new FootballFactory();
-    product = factory->getProduct();
+    product = factory->createProduct();
     product->productIntroduction();
+    delete factory;
+    delete product;
 
     factory = new VolleyballFactory();
-    product = factory->getProduct();
+    product = factory->createProduct();
     product->productIntroduction();
+    delete factory;
+    delete product;
 
     getchar();
     return 0;
 }
+
 ```
 
 ### 输出
