--- a/设计模式之抽象工厂模式.md
+++ b/设计模式之抽象工厂模式.md
@@ -136,7 +136,7 @@ public:
 class AbstractPhoneProduct
 {
 public:
-    ~AbstractPhoneProduct() = default;
+    virtual ~AbstractPhoneProduct() = default;
     //抽象方法：
     virtual void productName() = 0;
     virtual void productIntroduction() = 0;
@@ -144,12 +144,11 @@ protected:
     AbstractPhoneProduct()= default;
 
 };
-
 ///定义抽象产品类
 class AbstractTVProduct
 {
 public:
-    ~AbstractTVProduct() = default;
+    virtual ~AbstractTVProduct() = default;
     //抽象方法：
     virtual void productName() = 0;
     virtual void productIntroduction() = 0;
@@ -157,6 +156,7 @@ protected:
     AbstractTVProduct()= default;
 
 };
+
 ```
 
 
@@ -170,7 +170,7 @@ class HWPhone :public AbstractPhoneProduct
 {
 public:
     HWPhone() = default;
-    ~HWPhone() {
+    ~HWPhone() override {
         std::cout << "HWPhone Bye" << std::endl;
     };
     void productName() override{
@@ -186,7 +186,7 @@ class MIPhone :public AbstractPhoneProduct
 {
 public:
     MIPhone() = default;
-    ~MIPhone() {
+    ~MIPhone() override {
         std::cout << "MIPhone Bye" << std::endl;
     };
     void productName() override{
@@ -203,7 +203,7 @@ class HWTV :public AbstractTVProduct
 {
 public:
     HWTV() = default;
-    ~HWTV() {
+    ~HWTV() override {
         std::cout << "HWTV Bye" << std::endl;
     };
     void productName() override{
@@ -219,7 +219,7 @@ class MITV :public AbstractTVProduct
 {
 public:
     MITV() = default;
-    ~MITV() {
+    ~MITV() override {
         std::cout << "MITV Bye" << std::endl;
     };
     void productName() override{
@@ -240,7 +240,7 @@ public:
 class AbstractFactory
 {
 public:
-    ~AbstractFactory() = default;
+    virtual ~AbstractFactory() = default;
     virtual AbstractPhoneProduct * createPhone() = 0;
     virtual AbstractTVProduct * createTV() = 0;
 protected:
@@ -254,13 +254,15 @@ protected:
 
 ```cpp
 
-///三个具体工厂类
+///两个具体工厂类
 ///具体工厂类  生产多个产品
 class HWFactory : public AbstractFactory
 {
 public:
     HWFactory() = default;
-    ~HWFactory() = default;
+    ~HWFactory() override {
+        std::cout << "HWFactory Bye" << std::endl;
+    };
     AbstractPhoneProduct *createPhone() override{
         return  new HWPhone();
     }
@@ -274,7 +276,9 @@ class MIFactory : public AbstractFactory
 {
 public:
     MIFactory() = default;
-    ~MIFactory() = default;
+    ~MIFactory() override {
+        std::cout << "MIFactory Bye" << std::endl;
+    };
     AbstractPhoneProduct *createPhone() override{
         return  new MIPhone();
     }
@@ -282,6 +286,7 @@ public:
         return  new MITV();
     }
 };
+
 ```
 
 
@@ -289,9 +294,12 @@ public:
 ## 测试
 
 ```cpp
+
 int main() {
 
     std::cout << "抽象工厂模式" << std::endl;
+
+
     //定义工厂类对象和产品类对象
     AbstractPhoneProduct *phone = nullptr;
     AbstractTVProduct *tv = nullptr;
@@ -302,16 +310,24 @@ int main() {
     phone->productName();
     tv = factory->createTV();
     tv->productIntroduction();
+    delete factory;
+    delete phone;
+    delete tv;
 
     factory = new MIFactory();
     phone = factory->createPhone();
     phone->productName();
     tv = factory->createTV();
     tv->productIntroduction();
-    
+    delete factory;
+    delete phone;
+    delete tv;
+
+
     getchar();
     return 0;
 }
+
 ```
 
 
