--- a/设计模式之简单工厂模式.md
+++ b/设计模式之简单工厂模式.md
@@ -120,7 +120,7 @@ public:
 class AbstractBallProduct
 {
 public:
-    ~AbstractBallProduct() = default;
+    virtual ~AbstractBallProduct() = default;
     //抽象方法：
     virtual void productName() = 0;
     virtual void productIntroduction() = 0;
@@ -133,14 +133,13 @@ protected:
 ### 定义具体产品类
 
 ```cpp
-
 //三个具体产品类
 //具体产品类Basketball
 class Basketball :public AbstractBallProduct
 {
 public:
     Basketball() = default;
-    ~Basketball() {
+    ~Basketball() override {
         std::cout << "Basketball Bye" << std::endl;
     };
     void productName() override{
@@ -156,7 +155,7 @@ class Football :public AbstractBallProduct
 {
 public:
     Football() = default;
-    ~Football() {
+    ~Football() override {
         std::cout << "Football Bye" << std::endl;
     };
     void productName() override{
@@ -172,7 +171,7 @@ class Volleyball :public AbstractBallProduct
 {
 public:
     Volleyball() = default;
-    ~Volleyball() {
+    ~Volleyball() override {
         std::cout << "Volleyball Bye" << std::endl;
     };
     void productName() override{
@@ -211,18 +210,21 @@ public:
 ### 测试
 
 ```cpp
-#include "SimpleFactory.h"
-
 int main() {
     std::cout << "简单工厂模式" << std::endl;
     //定义工厂类对象
     AbstractBallProduct *product = nullptr;
     product = SimpleFactory::getProduct("Basketball");
     product->productName();
+    delete product;
+
     product = SimpleFactory::getProduct("Football");
     product->productIntroduction();
+    delete product;
+
     product = SimpleFactory::getProduct("Volleyball");
     product->productIntroduction();
+    delete product;
     getchar();
     return 0;
 }
