--- a/设计模式之简单工厂模式.md
+++ b/设计模式之简单工厂模式.md
@@ -101,7 +101,7 @@ public:
 
 
 
-
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201225225736937.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 
 
@@ -234,7 +234,7 @@ int main() {
 
 ![image-20201224165935326](\upload\设计模式之简单工厂模式\A_设计模式之简单工厂模式.png)
 
-
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201225225803313.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 *个人能力有限，如有错误之处或者其他建议，敬请告知欢迎探讨，谢谢!*
 
