--- a/设计模式之抽象工厂模式.md
+++ b/设计模式之抽象工厂模式.md
@@ -10,6 +10,8 @@
 
 ![电器工厂的产品等级与产品族](\upload\设计模式之抽象工厂模式\A_设计模式之抽象工厂模式.gif)
 
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201225230637563.gif)
+
 
 
 
@@ -119,7 +121,7 @@ public:
 
 ![设计模式之抽象工厂模式](\upload\设计模式之抽象工厂模式\设计模式之抽象工厂模式.jpg)
 
-
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201225230713688.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 
 
@@ -335,6 +337,10 @@ int main() {
 ## 输出
 
 ![image-20201225154320853](\upload\设计模式之抽象工厂模式\B_设计模式之抽象工厂模式.png)
+
+
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201225230734502.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 
 
