--- a/设计模式之建造者模式.md
+++ b/设计模式之建造者模式.md
@@ -73,7 +73,7 @@ JAVA 中的 StringBuilder。
 
 ## GitHub
 
-
+[BuilderPattern](https://github.com/lichangke/DesignPattern/tree/main/demos/%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F%E4%B9%8B%E5%BB%BA%E9%80%A0%E8%80%85%E6%A8%A1%E5%BC%8F/BuilderPattern)
 
 ## 产品角色（Product）
 
@@ -287,6 +287,14 @@ int main() {
 ## 输出
 
 ![image-20201228164654077](\upload\设计模式之建造者模式\A_设计模式之建造者模式.png)
+
+
+
+# 建造者模式VS工厂模式
+
+
+
+**工厂模式**是用来创建**不同但是相关类型**的对象（继承同一父类或者接口的一组子类），由给定的参数来决定创建哪种类型的对象。**建造者模式**是用来创建**一种类型的复杂对象**，通过设置不同的可选参数，“定制化”地创建不同的对象。
 
 
 
