--- a/设计模式之单例模式.md
+++ b/设计模式之单例模式.md
@@ -53,7 +53,7 @@ Windows任务管理器只能启动一个
 
 ![设计模式之单例模式](\upload\设计模式之单例模式\设计模式之单例模式.jpg)
 
-
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201228214804598.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 
 
@@ -118,9 +118,9 @@ int main() {
 
 ### 输出
 
-![image-20201228110635926](D:\GitHub\DesignPattern\upload\设计模式之单例模式\A_设计模式之单例模式.png)
+![image-20201228110635926](\upload\设计模式之单例模式\A_设计模式之单例模式.png)
 
-
+![在这里插入图片描述](https://img-blog.csdnimg.cn/2020122821482372.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 ## 懒汉式
 
@@ -243,13 +243,17 @@ int main() {
 
 懒汉式单例类+双检查锁
 
-![image-20201228115708404](D:\GitHub\DesignPattern\upload\设计模式之单例模式\B_设计模式之单例模式.png)
+![image-20201228115708404](\upload\设计模式之单例模式\B_设计模式之单例模式.png)
+
+
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201228214844924.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 懒汉式单例类+static变量
 
-![image-20201228134847599](D:\GitHub\DesignPattern\upload\设计模式之单例模式\C_设计模式之单例模式.png)
+![image-20201228134847599](\upload\设计模式之单例模式\C_设计模式之单例模式.png)
 
-
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201228214853321.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 
 
