--- a/设计模式之建造者模式.md
+++ b/设计模式之建造者模式.md
@@ -63,6 +63,10 @@ JAVA 中的 StringBuilder。
 
 ![设计模式之建造者模式](\upload\设计模式之建造者模式\设计模式之建造者模式.jpg)
 
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201228215417256.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
+
+
+
 
 
 # 代码示例
@@ -287,6 +291,8 @@ int main() {
 ## 输出
 
 ![image-20201228164654077](\upload\设计模式之建造者模式\A_设计模式之建造者模式.png)
+
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20201228215445353.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2xlYWNvY2sxOTkx,size_16,color_FFFFFF,t_70)
 
 
 
