--- a/设计模式之建造者模式.md
+++ b/设计模式之建造者模式.md
@@ -258,27 +258,27 @@ int main() {
     //抽象建造者
     AbstractBuilder *builder;
     //产品：套餐
-    ProductMeal *house;
+    ProductMeal *meal;
 
     //指定具体建造者A
     builder = new ConcreteBuilderMeal_A();
     director.setBuilder(builder);
-    house = director.construct();
-    house->showMeal();
+    meal = director.construct();
+    meal->showMeal();
     delete builder;
     std::cout << "======================" << std::endl;
     //指定具体建造者C
     builder = new ConcreteBuilderMeal_C();
     director.setBuilder(builder);
-    house = director.construct();
-    house->showMeal();
+    meal = director.construct();
+    meal->showMeal();
     delete builder;
     std::cout << "======================" << std::endl;
     //指定具体建造者B
     builder = new ConcreteBuilderMeal_B();
     director.setBuilder(builder);
-    house = director.construct();
-    house->showMeal();
+    meal = director.construct();
+    meal->showMeal();
     delete builder;
 
     getchar();
