--- a/代理、桥接、装饰器、适配器 4 种设计模式的区别.md
+++ b/代理、桥接、装饰器、适配器 4 种设计模式的区别.md
@@ -132,7 +132,13 @@ Wrapper 类是Adapter
 
 
 
+## 参考：
 
+[https://time.geekbang.org/column/article/205912](https://time.geekbang.org/column/article/205912)
+
+
+
+*个人能力有限，如有错误之处或者其他建议，敬请告知欢迎探讨，谢谢!*
 
 
 
